Code readability and accessibility fixes

--- a/styles/sass/styles.sass
+++ b/styles/sass/styles.sass
@@ -31,6 +31,8 @@ body
   background-repeat: no-repeat
   background-position-y: -30px
   background-position-x: calc(100vw - 200px)
+h1
+  margin-bottom: 10px
 h2
   font-size: 1.2em
   margin-bottom: 20px
@@ -44,12 +46,18 @@ button
   font-size: 0.85em
   text-transform: uppercase
   letter-spacing: 1.5px
+  border: 1px solid transparent
+button:hover
+  background: none
+  color: $col-dark
+  border: 1px solid $col-dark
+  cursor: pointer
 
 .wrapper
   text-align: center
   padding-bottom: 40px
 header
-  padding: 40px 0 90px 0
+  padding: 40px 0 50px 0
 
 main
   max-width: 1050px
@@ -92,15 +100,17 @@ main
   color: $col-medium
   background: white
   box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1)
-
-
-
+.card.highlight button:hover
+  color: white
+  background: none
+  border: 1px solid white
 
 // TOGGLE SWITCH
-#toggle input
-  // height: 1px
-  // width: 1px
+#toggle
 
+#toggle input
+  height: 0px
+  width: 0px
 #toggle .switch
   height: 30px
   width: 60px
@@ -108,6 +118,9 @@ main
   background: $gradient-lr
   display: inline-block
   position: relative
+#toggle .switch:hover
+  cursor: pointer
+  opacity: 0.6
 #toggle .switch::after
   position: absolute
   content: ""
@@ -117,17 +130,18 @@ main
   top: 4px
   left: 4px
   border-radius: 100px
+#toggle .switch
+  margin-bottom: -10px
+  margin-left: 20px
+  margin-right: 10px
+#toggle label
+  color: $col-light
 .moveit::after
   left: 34px !important
-
-
-
-
-
-
-
-
-
+legend
+  visibility: hidden
+fieldset
+  border: none
 
 
 
